fix(scroll): add scrollbar to some components and fix scroll in map editor

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,10 +13,6 @@
     height: 8px;
 }
 
-.scrollbar::-webkit-scrollbar-track {
-    /* background: #f0f0f0; */
-}
-
 .scrollbar::-webkit-scrollbar-thumb {
     background-color: #457b9d;
     border-radius: 4px;
